2007-02-02  Greg Troxel  <Greg Troxel <gdt@ir.bbn.com>>

	* README.NetBSD:  use update-autotools instead of autoreconf

	* update-autotools: print out tool name before invoking to aid debugging

2006-12-08 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump to 0.99.6

2006-10-04 Oliver Hookins <ohookins@gmail.com>

	* bgpd/bgp_main.c: Add configuration check option, with
	'-C' rather than '-c' for consistency between daemons.
	* isisd/isis_main.c: ditto
	* ospf6d/ospf6_main.c: ditto
	* ospfd/ospf_main.c: ditto
	* ripngd/ripng_main.c: ditto
	* vtysh/vtysh_main.c: ditto
	* ripd/rip_main.c: Change the config check option to
	'-C' and tidy up the code.
	* zebra/main.c: ditto	

2006-10-04 Stergiakis Alexandros <astergiakis@antcor.com>

	* ripd/rip_main.c: This trivial patch introduces a new
	  command-line option '-c', which instructs zebra/ripd
	  to check its configuration file for validity,	print 
	  any error message, and then exit. This is useful when
	  the configuration file is edited by hand or otherwise,
	  and you simply want to validate it without any other
	  effect.
	* zebra/main.c: ditto

2006-08-27 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump to 0.99.5

2006-06-15 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* redhat/quagga.spec.in: Get default distro automatically
	  by using rpm to query the fedora-release version.
	  And fix a typo (should be default_dist, not dist_default).

2006-05-28 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Update SOS CFLAGS, Xt shouldn't be used and
	  enable debug options.
	  Add a check for GNU Make and warn the user if it does not appear
	  to be the make used.
	  Check for Sun libc printstack(), add a general HAVE_STACK_TRACE
	  define for lib/log.c, if any supported stack symbol dumping
	  function is found (glibc backtrace/sun libc printstack).

2006-05-10 Paul Jakma <paul.jakma@sun.com>

	* configure.ac: Bump to 0.99.4

2006-03-30 Paul Jakma <paul.jakma@sun.com>
