@@ -1,5 +1,7 @@
 2007-02-02  Greg Troxel  <Greg Troxel <gdt@ir.bbn.com>>
 
+	* bootstrap.sh: new file with just 'autoreconf'
+
 	* README.NetBSD:  use update-autotools instead of autoreconf
 
 	* update-autotools: print out tool name before invoking to aid debugging
